--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div class="content">
         <img src="https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Project Overview">
-        <h1>Welcome to our Sámi language modeling project</h1>
+        <h1>Welcome to Our Sámi Language Modeling Pproject</h1>
         <p>This project focuses on innovative research and development in the field of Acutely Low Resource (ALR) language modeling. Here you can find in-depth details about our research methods, resources, and the brilliant team behind our success.</p>
         <p>Explore our extensive <a href="resources.html">resources</a> or get to know our <a href="people.html">team members</a>.</p>
     </div>
