--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
     <div class="content">
         <img src="https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Project Overview">
         <h1>Welcome to Our Sámi Language Modeling Project</h1>
-        <p>This project focuses on innovative research and development in the field of Acutely Low Resource (ALR) language modeling. Here you can find in-depth details about our research methods, resources, and the brilliant team behind our success.</p>
-        <p>Explore our extensive <a href="resources.html">resources</a> or get to know our <a href="people.html">team members</a>.</p>
+        <p>This project focuses on research and development in the field of Acutely Low Resource (ALR) language modeling.</p>
+        <p>The data can be provided for research purposes upon request to <a href="mailto:dilip.prasad@uit.no">dilip.prasad@uit.no</a>.</p>
+        <!-- Explore our <a href="resources.html">resources</a> or get to know our <a href="people.html">team members</a>.</p> -->
     </div>
 
     <footer>
-        <p>Contact us: <a href="mailto:himanshu.buckchash@uit.no">himanshu.buckchash@uit.no</a></p>
+        <!-- <p>Contact us: <a href="mailto:dilip.prasad@uit.no">dilip.prasad@uit.no</a></p> -->
         <p>&copy; 2024 UiT The Arctic University of Norway. All rights reserved.</p>
         <p>Discover more about us on our <a href="about.html">About page</a>.</p>
     </footer>
