--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
     <header>
-        <a href="#overview">Project Overview</a>
+        <a href="https://github.com/hbachchas/sami-text-ext/tree/master">Code</a>
         <a href="https://arxiv.org/abs/2405.05777" target="blank">Paper</a>
         <a href="https://www.bioailab.org/" target="blank">Contact Us</a>
     </header>
